--- a/index.html
+++ b/index.html
@@ -11,11 +11,29 @@
     <style>
         body {
             font-family: 'Nunito', sans-serif;
+            background-color: #eaf2f8;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239ac5e3' fill-opacity='0.2'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h16v9h1v-9h9v9h1v-9h9v9h1v-9h9v9h1v-9h9v9h1v-9h9v9h1v-9h9v9h1v-9h9v9h1v-9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-10-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-10-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-10-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0h1v5h9V0h1v5h9V0h1v5h9V0h1v5h9V0h1v5h9V0h1v5h9V0h1v5h9V0h1v5h9V0h1v6H0V5h6zm0 10V9h1v6h9V9h1v6h9V9h1v6h9V9h1v6h9V9h1v6h9V9h1v6h9V9h1v6h9V9h1v6h9V9h1v6h9V9h1v7H0v-1h6zm0 10V19h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6zm0 10V29h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6zm0 10V39h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6zm0 10V49h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6zm0 10V59h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6zm0 10V69h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6zm0 10V79h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v6h9v-6h1v7H0v-1h6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            background-attachment: fixed;
         }
         .font-title {
             font-family: 'Luckiest Guy', cursive;
         }
+        .text-gradient {
+            background: -webkit-linear-gradient(45deg, #2a52e1, #5171e5);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
     </style>
+<script type="importmap">
+{
+  "imports": {
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.24.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0"
+  }
+}
+</script>
 </head>
 <body class="bg-slate-100">
     <div id="root"></div>
