--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        /* Custom Scrollbar Styling */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #eaf2f8; 
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #9ac5e3; 
+            border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #5171e5; 
+        }
     </style>
 <script type="importmap">
 {
